--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" type="text/javasript" defer></script>
+    <script src="script.js" type="text/javascript" defer></script>
 </head>
 <body>
     <div class="flex-container">
@@ -14,13 +14,23 @@
             <div class="screen-container">
                 <div class="screen-value">0</div>
             </div>
+            
             <div class="clear-container">
                 <div class="clear-button">CE</div>
                 <div class="backspace-button">Back</div>
             </div>
-            <div id="numberContainer" class="number-container">
+            <div class="button-container">
+                <div id="numberContainer" class="number-container">
 
+                </div>
+                <div class="operator-container">
+                    <div class="add">/</div>
+                    <div class="multiply">*</div>
+                    <div class="subtract">-</div>
+                    <div class="add">+</div>
+                </div>
             </div>
+            
         </div>
     </div>
 </body>
