--- a/index.html
+++ b/index.html
@@ -9,29 +9,31 @@
     <script src="script.js" type="text/javascript" defer></script>
 </head>
 <body>
-    <div class="flex-container">
-        <div class="calc-shell">
-            <div class="screen-container">
-                <div class="screen-value">0</div>
-            </div>
-            
-            <div class="clear-container">
-                <div class="clear-button">CE</div>
-                <div class="backspace-button">Back</div>
-            </div>
-            <div class="button-container">
-                <div id="numberContainer" class="number-container">
-
-                </div>
-                <div class="operator-container">
-                    <div class="add">/</div>
-                    <div class="multiply">*</div>
-                    <div class="subtract">-</div>
-                    <div class="add">+</div>
-                </div>
-            </div>
-            
+    <div class="calc-grid">
+        <div class="output">
+            <div id="prevOperand" class="previous-operand"></div>
+            <div id="operatorDiv" class="operator"></div>
+            <div id="currOperand" class="current-operand"></div>
+            <div id="resultScreen" class="result-operand"></div>
         </div>
+        <button class="span-two">AC</button>
+        <button>DEL</button>
+        <button>/</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>*</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>+</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>-</button>
+        <button>.</button>
+        <button>0</button>
+        <button class="span-two">=</div>
     </div>
 </body>
 </html>
